
2010-02-03  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-http-get-default-sentinel): sort
	`twittering-timeline-data' by ID.

2010-02-03  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-status-to-status-datum): Don't
	rewrite `created-at' by a same name element in `retweeted_status'
	node.

2010-02-02  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-http-get-default-sentinel): use
	`twittering-get-status-from-http-response'.
	(twittering-get-status-from-http-response): new function for
	extracting statuses from HTTP response.
	(twittering-get-tweets): use
	`twittering-http-get-default-sentinel' for the "search" timeline
	spec.
	(twittering-http-get-search-sentinel): removed.

2010-01-31  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-http-get-default-sentinel):
	rearranged.

	* twittering-mode.el (twittering-start-http-ssl-session): return
	the process object.
	(twittering-start-http-non-ssl-session): likewise.
	(twittering-get-tweets): likewise.

	* twittering-mode.el (twittering-process-info-alist): new variable
	for managing active process and timeline spec being retrieved by
	the process.
	(twittering-register-process): new function for registering a pair
	of process and timeline spec.
	(twittering-release-process): new function for releasing a process.
	(twittering-get-timeline-spec-from-process): new function for
	getting timeline spec retrieved by the given process.
	(twittering-http-get-default-sentinel): discard statuses if
	the retrieved spec differs from the last requested one.
	(twittering-get-and-render-timeline): register a pair of the
	requested timeline spec and process for retrieving it.

2010-01-30  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-fill-string): use `frame-width'
	only if no windows display the `*twittering*' buffer.

2010-01-29  Daiji Kanematsu  <daijik@gmail.com>
